[gd_scene load_steps=4 format=3 uid="uid://xcwp326rqe5n"]

[ext_resource type="Script" uid="uid://prpp5ocpav23" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://bfu853o17rfvb" path="res://file_menu.gd" id="3_h2yge"]
[ext_resource type="Script" uid="uid://tn5a5g7xiekq" path="res://edit_menu.gd" id="4_1bvp3"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="MenuBar" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="FileMenu" type="MenuButton" parent="TopBar"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "ファイル"
item_count = 5
popup/item_0/text = "新規ファイル"
popup/item_0/id = 0
popup/item_1/text = "開く"
popup/item_1/id = 1
popup/item_2/text = "上書き保存"
popup/item_2/id = 2
popup/item_3/text = "名前を付けて保存"
popup/item_3/id = 3
popup/item_4/text = "閉じる"
popup/item_4/id = 4
script = ExtResource("3_h2yge")

[node name="EditMenu" type="MenuButton" parent="TopBar"]
layout_mode = 0
offset_left = 60.0
offset_right = 100.0
offset_bottom = 31.0
text = "編集"
item_count = 2
popup/item_0/text = "タブを閉じる"
popup/item_0/id = 0
popup/item_1/text = "すべてのタブを閉じる"
popup/item_1/id = 1
script = ExtResource("4_1bvp3")

[node name="ViewMenu" type="MenuButton" parent="TopBar"]
layout_mode = 0
offset_left = 100.0
offset_right = 140.0
offset_bottom = 31.0
text = "表示"

[node name="ResourceMenu" type="MenuButton" parent="TopBar"]
layout_mode = 0
offset_left = 145.0
offset_right = 200.0
offset_bottom = 31.0
text = "リソース"
item_count = 1
popup/item_0/text = "SyntaxTemp"
popup/item_0/id = 0

[node name="BottomBar" type="MenuBar" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -18.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0

[node name="IndentSizeMenu" type="MenuButton" parent="BottomBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -15.5
offset_right = -25.0
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "Indent: 4"
item_count = 2
popup/item_0/text = "4"
popup/item_0/id = 4
popup/item_1/text = "2"
popup/item_1/id = 2

[node name="SyntaxMenu" type="MenuButton" parent="BottomBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -15.5
offset_right = -110.0
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "Text"

[node name="OpenFileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(600, 480)
ok_button_text = "Open"
cancel_button_text = "キャンセル"
file_mode = 0
access = 2

[node name="SaveFileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "ファイルを保存"
initial_position = 2
size = Vector2i(600, 480)
cancel_button_text = "キャンセル"
access = 2

[connection signal="tab_changed" from="TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_open_file_dialog_file_selected"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_save_file_dialog_file_selected"]
